fix: 修复pom文件